src/objects/ShowpadForSF__Showpad_Activity__c.object
<CustomObject>
    <description>A share, email, link, ... made with Showpad.</description>
    <fields>
        <fullName>ShowpadForSF__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Showpad Activities</relationshipLabel>
        <relationshipName>Showpad_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShowpadForSF__Activity_Time__c</fullName>
        <description>The time when the activity was created in Showpad.</description>
        <label>Activity Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ShowpadForSF__Next_Opportunity_Probability__c</fullName>
        <description>The next probability of the opportunity after the activity happened.</description>
        <label>Next Opportunity Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ShowpadForSF__Next_Opportunity_Stage__c</fullName>
        <description>The next stage of the opportunity after the activity happened.</description>
        <label>Next Opportunity Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShowpadForSF__Opportunity_Probability__c</fullName>
        <description>The probability of the opportunity when the activity happened.</description>
        <label>Opportunity Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ShowpadForSF__Opportunity_Stage__c</fullName>
        <description>The stage of the opportunity when the activity happened.</description>
        <label>Opportunity Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShowpadForSF__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Showpad Activities</relationshipLabel>
        <relationshipName>Showpad_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShowpadForSF__Showpad_ID__c</fullName>
        <externalId>true</externalId>
        <label>Showpad ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ShowpadForSF__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShowpadForSF__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Share</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Link</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Showpad Activity</label>
    <listViews>
        <fullName>ShowpadForSF__All</fullName>
        <columns>NAME</columns>
        <columns>ShowpadForSF__Showpad_ID__c</columns>
        <columns>ShowpadForSF__Type__c</columns>
        <columns>ShowpadForSF__Subject__c</columns>
        <columns>ShowpadForSF__Account__c</columns>
        <columns>ShowpadForSF__Opportunity__c</columns>
        <columns>ShowpadForSF__Opportunity_Stage__c</columns>
        <columns>ShowpadForSF__Opportunity_Probability__c</columns>
        <columns>ShowpadForSF__Next_Opportunity_Stage__c</columns>
        <columns>ShowpadForSF__Next_Opportunity_Probability__c</columns>
        <columns>ShowpadForSF__Activity_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Showpad Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Showpad Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>